--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
 }
 
+.btn {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3;
+    background: #00757a;
+    color: white;
+}
+
+.btn:hover {
+    background-color: #1d1d1d;
+    color: #38e3ec;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -76,16 +91,60 @@
     font-size: 14px;
 }
 
-.navbar-search button {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background 0.3;
-    background: #00757a;
+.homepage-section {
+    background-image: url('home-page.jpg');
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+    position: relative;
 }
 
-.navbar-search button:hover {
-    background: rgb(153, 223, 153);
+.homepage-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.homepage-content {
+    position: absolute;
+    z-index: 2;
+    max-width: 800px;
+    left: 10%;
+    width: 50%;
+}
+
+.homepage-title {
+    font-size: 4rem;
+    font-weight: bold;
+    margin-bottom: 3rem;
+    letter-spacing: 3px;
+}
+
+.homepage-subtitle {
+    font-size: 1rem;
+    line-height: 1.6rem;
+    margin-bottom: 3rem;
+    max-width: 40%;
+}
+
+.book-now-btn {
+    padding: 15px 40px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    letter-spacing: 1px;
+}
+
+.book-now-btn:hover {
+    transform: translateY(-3px);
 }
