--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -4,6 +4,27 @@
     box-sizing: border-box;
 }
 
+.body-container {
+    background-image: url('home-page.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    position: relative;
+    color: white;
+}
+
+.body-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
 .btn {
     padding: 0.5rem 1rem;
     border: none;
@@ -91,7 +112,7 @@
     font-size: 14px;
 }
 
-.homepage-section {
+/* .homepage-section {
     background-image: url('home-page.jpg');
     height: 100vh;
     background-size: cover;
@@ -102,9 +123,9 @@
     justify-content: center;
     padding: 0 20px;
     position: relative;
-}
+} */
 
-.homepage-section::before {
+/* .homepage-section::before {
     content: '';
     position: absolute;
     top: 0;
@@ -113,7 +134,7 @@
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
-}
+} */
 
 .homepage-content {
     position: absolute;
@@ -121,6 +142,8 @@
     max-width: 800px;
     left: 10%;
     width: 50%;
+    /* margin-top: 2rem; */
+    padding-top: 5rem;
 }
 
 .homepage-title {
@@ -147,4 +170,78 @@
 
 .book-now-btn:hover {
     transform: translateY(-3px);
+}
+
+
+.about-us-container {
+    position: relative;
+    z-index: 2;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 4rem 2rem;
+}
+
+.about-us-section {
+    margin-bottom: 1.5rem;
+}
+
+.about-us-section h1 {
+    font-size: 2.5rem;
+    color: white;
+    margin-bottom: 3rem;
+    letter-spacing: 3px;
+}
+
+.about-us-section p {
+    font-size: 1.1rem;
+    line-height: 1.8;
+}
+
+.team-section {
+    margin-top: 4rem;
+}
+
+.team-section h2 {
+    font-size: 3rem;
+    letter-spacing: 2px;
+    padding-top: 40px;
+}
+
+.team-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem;
+    margin-top: 2rem;
+    align-items: stretch;
+}
+
+.team-member {
+    background: rgba(0, 0, 0, 0.11);
+    backdrop-filter: blur(2px);
+    padding: 2rem;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+    height: 100%;
+}
+
+.team-member:hover {
+    transform: translateY(-5px);
+}
+
+.team-member h3 {
+    font-size: 1.5rem;
+    margin: 1rem 0 0.5rem;
+}
+
+.team-member p {
+    font-size: 0.95rem;
+    line-height: 1.6;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.team-member button {
+    margin-top: 1rem;
+    background: rgb(45, 45, 170);
+    width: 100%;
 }
